# xdiff

./: Cargo.toml
examples/: config.rs  highlight.rs
fixtures/: test.yaml  xreq.yaml
src/: cli.rs  config.rs  lib.rs  main.rs  req.rs  request.rs  similar.rs  utils.rs
src/config/: mod.rs  xdiff.rs  xreq.rs
src/context/: mod.rs  req.rs  res.rs
