[package]
name = "xdiff"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xdiff"
path = "src/bin/xdiff.rs"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.27", features = ["derive"] }
console = "0.15.2"
dialoguer = "0.10.2"
http = "0.2.8"
http-serde = "1.1.2"
mime = "0.3.16"
reqwest = { version = "0.11.13", default-features = false, features = [
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
    "json",
] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
serde_urlencoded = "0.7.1"
serde_with = "2.1.0"
serde_yaml = "0.9.14"
similar = { version = "2.2.1", features = ["inline", "bytes"] }
syntect = "5.0.0"
tokio = { version = "1.22.0", features = ["full"] }
url = { version = "2.3.1", features = ["serde"] }
